v2.3.2: SonarLint cleanup — string constants, private constructors, code style